<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6071952">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/motor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/editTextEmailPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailPassword"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:hint="@string/enter_your_email"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="461dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:hint="@string/enter_your_password"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:text="@string/buttonSignup"
        android:textColor="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="580dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:text="@string/buttonlogin"
        android:textColor="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="580dp" />
</androidx.constraintlayout.widget.ConstraintLayout>