<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="204dp"
            android:layout_height="198dp"
            android:layout_gravity="center"
            android:src="@drawable/flow1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="210dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="194dp"
            android:layout_height="51dp"
            android:background="@drawable/button_background"
            android:text="@string/button"
            android:textColor="#FFFFFF"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="688dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/textview"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="571dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/textview2"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="602dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>